# OMZ-Lab7

./: .gitignore  cabal.project  log.txt  sus.py
OMZ-Lab7/: OMZ-Lab7.cabal
OMZ-Lab7/src/: App.hs  Coordinates.hs  Main.hs  OpenGLWidget.hs  Shaders.hs  Types.hs
OMZ-Lab7/src/Linear/: OpenGL.hs
shaders/: frag.glsl  fragSingleColor.glsl  vert.glsl  vertSingleAxis.glsl
